--- a/README
+++ b/README
@@ -893,6 +893,8 @@ SIMILAR SOFTWARE
      rximapmail: https://sourceforge.net/projects/rximapmail/
      Shoviv: https://www.shoviv.com/email-backup.html Allows backup from various sources including Office 365 (Exchange Online, Exchange On-Premises), IMAP, and Google Workspace.
      CodeTwo: https://www.codetwo.com/ but CodeTwo does imap source to Office365 only.
+     EdbMails: https://www.edbmails.com/pages/imap-migration-tool.html — IMAP migration and backup solution supporting Office 365, Exchange, and popular mail servers.
+
 
 HISTORY
 
